# TestIndlab

./: pyproject.toml
task_1/: combined.ipynb
task_2/: README.docx
task_2/src/: main.py
task_2/src/static/: styles.css
task_2/src/templates/: authenticate.html  base.html  complete_login.html  dashboard.html  index.html  message_handler.html  messages.html  summarize_form.html  summary_result.html
